--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hello Rigo with Vanilla.js</title>
+    <title>Domain Name Generator</title>
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.2.0/css/all.css"
@@ -11,7 +11,8 @@
       crossorigin="anonymous"
     />
     <link rel="shortcut icon" href="./4geeks.ico" />
-  </head>
+    <script src="app.js"></script>
+    <link rel="stylesheet" href="style.css"/>
   <body>
     <div class="container-fluid text-center">
       <h1 class="mt-5">Hello Rigo!</h1>
@@ -23,6 +24,7 @@
       <div class="fixed-bottom p-4">
         Made with ❤️ by
         <a href="https://www.4geeksacademy.com">4Geeks Academy</a>
+        <ul id="results"></ul>
       </div>
     </div>
   </body>
